Added readme_alma.html for alma.yaml

--- a/alma.yaml
+++ b/alma.yaml
@@ -1,7 +1,7 @@
 Name: Atacama Large Milimetre and submillimetre Array Public Data
 Description: |
   XXXXXXX
-Documentation: http://xxxxx
+Documentation: readme_alma.html
 Contact: juande.santander-vela@industriasinteligentes.cl
 UpdateFrequency: Hourly
 Tags:
