Made Description TBW

--- a/alma.yaml
+++ b/alma.yaml
@@ -1,9 +1,9 @@
 Name: Atacama Large Milimetre and submillimetre Array Public Data
 Description: |
-  XXXXXXX
 Documentation: readme_alma.html
 Contact: juande.santander-vela@industriasinteligentes.cl
 UpdateFrequency: Hourly
+  TBW # To Be Written (this will include data formats)
 Tags:
   - astronomy
   - radio
